# floaty

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
docs/: USER_GUIDE.md
docs/superpowers/plans/: 2026-04-17-floaty-phase-1-foundation.md  2026-04-17-floaty-phase-2-multi-sticky.md  2026-04-17-floaty-phase-3-customization.md  2026-04-17-floaty-phase-4-due-times.md  2026-04-17-floaty-phase-5-reminders.md  2026-04-20-floaty-phase-6-smart-time.md
docs/superpowers/specs/: 2026-04-17-floaty-design.md  2026-04-17-stickydo-design.md
src/: App.tsx  platform.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_reminders.sql  0004_soft_delete.sql  0005_fts.sql
src-tauri/src/: error.rs  lib.rs  reminders.rs  tray.rs  windows.rs
src-tauri/src/commands/: items.rs  mod.rs  reminders.rs  search.rs  stickies.rs  windows.rs
src-tauri/src/db/: items.rs  migrations.rs  mod.rs  reminders.rs  snapshots.rs  stickies.rs
src/editor/: DueTime.ts  DueTimePicker.tsx  Editor.tsx  markdown.test.ts  markdown.ts  timeHints.test.ts  timeHints.ts
src/ipc/: client.ts  types.ts
src/preferences/: PreferencesPage.tsx
src/search/: SearchPage.tsx
src/sticky/: SettingsPopover.tsx  StickyPage.tsx  useStickyData.ts
src/theme/: contrast.test.ts  contrast.ts  urgency.test.ts  urgency.ts
